# wish-cdp-codenyc

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  turbo.json
apps/fastapi/: .env.example  package.json  pyproject.toml
apps/fastapi/app/: celery.py  main.py
apps/fastapi/app/core/: config.py  limiter.py
apps/fastapi/app/core/utils/: html_cleaner.py  jwt_generator.py  url_validator.py
apps/fastapi/app/routers/: wishlist.py
apps/fastapi/app/schemas/: items.py  requests.py
apps/fastapi/app/services/: ai.py  auth.py  database.py  enrichment.py
apps/nextjs/: .env.example  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/nextjs/src/app/: globals.css  layout.tsx  page.tsx
apps/nextjs/src/components/: analytics-dashboard.tsx  logo.tsx
apps/nextjs/src/types/: x402-fetch.d.ts
apps/plasmo/: .env.example  .prettierrc.cjs  package.json  tailwind.config.js  tsconfig.json
apps/plasmo/.plasmo/: chrome-mv3.plasmo.manifest.json  devtools.html  messaging.d.ts  newtab.html  options.html  popup.html  process.env.d.ts  sidepanel.html
apps/plasmo/.plasmo/cache/: plasmo.version.json
apps/plasmo/.plasmo/static/: popup.tsx
apps/plasmo/src/app/: globals.css  layout.tsx  page.tsx
apps/plasmo/src/background/: index.ts
apps/plasmo/src/components/: login-form.tsx  logo.tsx  main.tsx  price-discovery-badges.tsx  price-trend-chart.tsx  settings.tsx  wishlist.tsx
apps/plasmo/src/contexts/: wallet-context.tsx
apps/plasmo/src/core/: chrome.ts  redact.ts
apps/plasmo/src/lib/: utils.ts
apps/plasmo/src/popup/: index.tsx
(+12 files in other folders)
